cmake_minimum_required(VERSION 3.10)
project(cp)
set(SOURCES src/cmdprompt/CommandPrompt.cpp src/cmdprompt/CommandPrompt.h src/cmdprompt/heavy.h.gch)
set(CMAKE_CXX_STANDARD 17)
set(BUFFER_LIBRARY src/cmdprompt/Buffer.cpp src/cmdprompt/Buffer.h)
add_library(cplib STATIC ${SOURCES})
# add_library(buflib STATIC ${BUFFER_LIBRARY})
add_executable(command_prompt_test tests/main.cpp)
target_link_libraries(command_prompt_test cplib)